Add test for OG edge function file

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "commonjs",
   "scripts": {
     "start": "node server.js",
-    "test": "node tests/server.test.js && node test/orLogic.test.js"
+    "test": "node tests/server.test.js && node tests/og.test.js && node test/orLogic.test.js"
   },
   "dependencies": {
     "@vercel/og": "^0.6.8"
