Add OG image endpoint

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "node tests/server.test.js && node test/orLogic.test.js"
   },
   "dependencies": {
-    "@vercel/og": "^0.6.8"
+    "@vercel/og": "^0.6.8",
+    "react": "^18.2.0"
   }
 }
